--- a/site_production/sass/main.scss
+++ b/site_production/sass/main.scss
@@ -1,4 +1,5 @@
+@import "./body.scss";
+@import "./variables.scss";
 @import "./header.scss";
 @import "./button.scss";
-@import "./variables.scss";
 @import "./footer.scss";
