--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -1,8 +1,3 @@
-body {
-  font-family: roboto, sans-serif;
-  margin: 0px;
-}
-
 @media (max-width: 767.98px) {
   .header__logo {
     display: flex;
@@ -10,7 +5,7 @@ body {
     align-items: center;
     padding: 20px 0px 20px 0px;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1490196078);
-    z-index: 1;
+    z-index: 2;
     position: relative;
   }
   .header__location {
@@ -21,12 +16,71 @@ body {
     justify-content: center;
     align-items: center;
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.3647058824);
-    z-index: 0;
+    z-index: 1;
     position: relative;
   }
   .header__location svg {
     margin-right: 10px;
   }
+}
+body {
+  font-family: "roboto", sans-serif;
+  margin: 0px;
+}
+
+@media (max-width: 767.98px) {
+  .reservation {
+    position: relative;
+    z-index: 0;
+  }
+  .reservation__title {
+    display: flex;
+    justify-content: center;
+    margin-top: 45px;
+  }
+  .reservation h2 {
+    width: 75%;
+    text-align: center;
+    margin: 0px;
+  }
+  .reservation__text {
+    display: flex;
+    justify-content: center;
+  }
+  .reservation__text p {
+    width: 75%;
+    text-align: center;
+  }
+  .reservation__bouton {
+    display: flex;
+    justify-content: center;
+  }
+  .reservation .button {
+    background: linear-gradient(#FF79DA, #9356DC);
+    display: flex;
+    text-decoration: none;
+    width: 20%;
+    height: 50px;
+    border: none;
+    border-radius: 25px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    color: white;
+  }
+}
+.button {
+  background: linear-gradient(#FF79DA, #9356DC);
+  display: flex;
+  text-decoration: none;
+  width: 20%;
+  height: 50px;
+  border: none;
+  border-radius: 25px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
 
 /*# sourceMappingURL=styles.css.map */
