--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -1,4 +1,35 @@
 body{
-    font-family: roboto, sans-serif;
+    font-family: "roboto", sans-serif;
     margin: 0px;
+}
+
+// Première section
+@media (max-width: 767.98px){
+    .reservation{
+        position: relative;
+        z-index: 0;
+        &__title{
+            display: flex;
+            justify-content: center;
+            margin-top: 45px;
+        }
+        & h2{
+            width: 75%;
+            text-align: center;
+            margin: 0px;
+        }
+        &__text{
+            display: flex;
+            justify-content: center;
+            & p{
+                width: 75%;
+                text-align: center;
+            }
+        }
+        &__bouton{
+            display: flex;
+            justify-content: center;
+        }
+        @import "./button.scss";
+    }
 }
