--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -8,10 +8,11 @@ body{
     .reservation{
         position: relative;
         z-index: 0;
+        background-color: rgb(245, 239, 239);
+        padding: 45px 0px 50px 0px;
         &__title{
             display: flex;
             justify-content: center;
-            margin-top: 45px;
         }
         & h2{
             width: 75%;
@@ -21,15 +22,21 @@ body{
         &__text{
             display: flex;
             justify-content: center;
+            margin-bottom: 15px;
             & p{
                 width: 75%;
                 text-align: center;
             }
         }
-        &__bouton{
+        &__button{
             display: flex;
             justify-content: center;
+            @import "./button.scss";
         }
-        @import "./button.scss";
+        
+    
+        
+        
     }
+    
 }
