--- a/site_production/sass/button.scss
+++ b/site_production/sass/button.scss
@@ -2,7 +2,7 @@
     background: linear-gradient(#FF79DA, #9356DC);
     display: flex;
     text-decoration: none;
-    width: 20%;
+    width: auto;
     height: 50px;
     border: none;
     border-radius: 25px;
@@ -10,4 +10,7 @@
     justify-content: center;
     align-items: center;
     color: white;
+    & p{
+        margin: 15px;
+    }
 }
