--- a/site_production/sass/main.scss
+++ b/site_production/sass/main.scss
@@ -1,5 +1,5 @@
 @import "./header.scss";
 @import "./body.scss";
 @import "./variables.scss";
-@import "./button.scss";
+//@import "./button.scss";
 @import "./footer.scss";
