--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -32,7 +32,7 @@ body {
   .reservation {
     position: relative;
     z-index: 0;
-    background-color: rgb(245, 239, 239);
+    background-color: rgb(253, 246, 246);
     padding: 45px 0px 50px 0px;
   }
   .reservation__title {
@@ -72,6 +72,49 @@ body {
   }
   .reservation__button .button p {
     margin: 15px;
+  }
+  .explain__title {
+    padding: 20px 0px 0px 20px;
+  }
+  .explain__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .explain__cards {
+    position: relative;
+    z-index: 0;
+    background-color: #F6F6F6;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: none;
+    border-radius: 20px;
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
+    height: 72px;
+    width: 85%;
+    margin-left: 30px;
+  }
+  .explain__cards svg {
+    margin-left: 35px;
+  }
+  .explain__cards h3 {
+    margin-left: 25px;
+  }
+  .explain .circle__numbers {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+    background-color: #9356DC;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    top: 48px;
+    left: 23px;
   }
 }
 
