--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -8,7 +8,7 @@ body{
     .reservation{
         position: relative;
         z-index: 0;
-        background-color: rgb(245, 239, 239);
+        background-color: rgb(253, 246, 246);
         padding: 45px 0px 50px 0px;
         &__title{
             display: flex;
@@ -33,10 +33,53 @@ body{
             justify-content: center;
             @import "./button.scss";
         }
-        
-    
-        
-        
     }
-    
+// Deuxièmes sections
+
+    .explain{
+        &__title{
+            padding: 20px 0px 0px 20px;
+        }
+        &__container{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+        &__cards{
+            position: relative;
+            z-index: 0;
+            background-color: #F6F6F6;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            border: none;
+            border-radius: 20px;
+            box-shadow: 0px 4px 15px 0px #00000026;
+            height: 72px;
+            width: 85%;
+            margin-left: 30px;
+            & svg{
+                margin-left: 35px;
+            }
+            & h3{
+                margin-left: 25px;
+            }
+        }
+        & .circle__numbers{
+            position: relative;
+            z-index: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 24px;
+            height: 24px;
+            background-color: #9356DC;
+            border: none;
+            border-radius: 20px;
+            color: white;
+            top: 48px;
+            left: 23px;
+        }
+    }
 }
+
