phase 1 de la section restaurants mise en place de la structure + demarrage du html/css

--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -116,6 +116,21 @@ body {
     top: 48px;
     left: 23px;
   }
+  .restaurants {
+    background-color: rgb(253, 246, 246);
+  }
+  .restaurants__title {
+    padding-left: 15px;
+  }
+  .restaurants__cards__1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .restaurants__cards__1 img {
+    object-fit: cover;
+    height: 251px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
