--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -87,13 +87,55 @@ body{
         &__title{
             padding-left: 15px;
         }
+        &__container{
+            display: flex;
+            justify-content: center;
+        }
         &__cards__1{
             display: flex;
             flex-direction: column;
             justify-content: center;
+            z-index: 0;
             & img{
                 object-fit: cover;
-                height: 251px;
+                height: 176px;
+                width: 370px;
+                border: none;
+                border-radius: 20px 20px 0px 0px;
+            }
+            &__notif{
+                position: relative;
+                z-index: 1;
+                background-color: #99E2D0;
+                border-radius: 5px;
+                height: 29px;
+                width: 80px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                box-shadow: 0px 2px 4px 0px #00000026;
+                left: 275px;
+                bottom: 162px;
+            }
+            &__description{
+                background-color: white;
+                border-radius: 0px 0px 20px 20px;
+                box-shadow: 0px 4px 15px 0px #0000001A;
+                padding-left: 10px;
+                z-index: 0;
+                height: 85px;
+                &__heart{
+                    position: relative;
+                    z-index: 1;
+                    left: 310px;
+                    bottom: 70px;
+                    width: 22px;
+                    height: 22px;
+                }
+                &__text h3 {
+                    margin: 0px;
+                    padding-top: 15px;
+                }
             }
         }
     }
