--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -73,6 +73,9 @@ body {
   .reservation__button .button p {
     margin: 15px;
   }
+  .explain {
+    padding-bottom: 60px;
+  }
   .explain__title {
     padding: 20px 0px 0px 20px;
   }
@@ -120,7 +123,10 @@ body {
     background-color: rgb(253, 246, 246);
   }
   .restaurants__title {
-    padding-left: 15px;
+    padding: 60px 0px 0px 15px;
+  }
+  .restaurants__title h2 {
+    margin: 0px;
   }
   .restaurants__container {
     display: flex;
@@ -151,7 +157,7 @@ body {
     align-items: center;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
     left: 275px;
-    bottom: 162px;
+    top: 42px;
   }
   .restaurants__cards__1__description {
     background-color: white;
