--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -37,6 +37,7 @@ body{
 // Deuxièmes sections
 
     .explain{
+        padding-bottom: 60px;
         &__title{
             padding: 20px 0px 0px 20px;
         }
@@ -85,7 +86,10 @@ body{
     .restaurants{
         background-color: rgb(253, 246, 246);
         &__title{
-            padding-left: 15px;
+            padding: 60px  0px 0px 15px;
+            & h2{
+                margin: 0px;
+            }
         }
         &__container{
             display: flex;
@@ -115,7 +119,7 @@ body{
                 align-items: center;
                 box-shadow: 0px 2px 4px 0px #00000026;
                 left: 275px;
-                bottom: 162px;
+                top: 42px;
             }
             &__description{
                 background-color: white;
