--- a/site_production/sass/header.scss
+++ b/site_production/sass/header.scss
@@ -21,8 +21,9 @@
         box-shadow: 0px 4px 10px 0px #0000005d;
         z-index: 1;
         position: relative;
-        & svg{
+        & .fa-location-dot{
             margin-right: 10px;
+            color: #353535;
         }
 
     }
