--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -39,7 +39,7 @@ body{
     .explain{
         padding-bottom: 60px;
         &__title{
-            padding: 20px 0px 0px 20px;
+            padding: 20px 0px 13px 20px;
         }
         &__container{
             display: flex;
@@ -58,9 +58,9 @@ body{
             box-shadow: 0px 4px 15px 0px #00000026;
             height: 72px;
             width: 85%;
-            margin-left: 30px;
+            margin: 0px 0px 30px 30px;
             & .fa-mobile-screen-button, .fa-list-ul, .fa-store{
-                margin-left: 35px;
+                margin-left: 15px;
                 color: #7E7E7E;
             }
             & .fa-mobile-screen-button:hover, .fa-list-ul:hover, .fa-store:hover{
@@ -82,8 +82,7 @@ body{
             border: none;
             border-radius: 20px;
             color: white;
-            top: 48px;
-            left: 23px;
+            right: 12px;
         }
     }
 // Troisièmes section
