--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -125,6 +125,7 @@ body {
   }
   .restaurants {
     background-color: rgb(253, 246, 246);
+    padding-bottom: 70px;
   }
   .restaurants__title {
     padding: 60px 0px 0px 15px;
@@ -139,20 +140,20 @@ body {
     align-items: center;
     flex-wrap: wrap;
   }
-  .restaurants__cards {
+  .restaurants__cards__add {
     display: flex;
     flex-direction: column;
     justify-content: center;
     z-index: 0;
   }
-  .restaurants__cards img {
+  .restaurants__cards__add img {
     object-fit: cover;
     height: 176px;
     width: 370px;
     border: none;
     border-radius: 20px 20px 0px 0px;
   }
-  .restaurants__cards__notif {
+  .restaurants__cards__add__notif {
     position: relative;
     z-index: 1;
     background-color: #99E2D0;
@@ -165,6 +166,41 @@ body {
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
     left: 275px;
     top: 42px;
+  }
+  .restaurants__cards__add__description {
+    background-color: white;
+    border-radius: 0px 0px 20px 20px;
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
+    padding-left: 10px;
+    z-index: 0;
+    height: 85px;
+    width: 360px;
+  }
+  .restaurants__cards__add__description__heart {
+    position: relative;
+    z-index: 1;
+    left: 310px;
+    bottom: 70px;
+    width: 22px;
+    height: 22px;
+  }
+  .restaurants__cards__add__description__text h3 {
+    margin: 0px;
+    padding-top: 15px;
+  }
+  .restaurants__cards {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 0;
+    margin-top: 30px;
+  }
+  .restaurants__cards img {
+    object-fit: cover;
+    height: 176px;
+    width: 370px;
+    border: none;
+    border-radius: 20px 20px 0px 0px;
   }
   .restaurants__cards__description {
     background-color: white;
