creation du fichier page 1 pour les menu, mise en place du html + premiere carte menu faite, regler le master title par rapport au menu entrée qui ne responsive pas ensemble + reste a faire le header

--- a/site_production/sass/header.scss
+++ b/site_production/sass/header.scss
@@ -26,5 +26,14 @@
             color: #353535;
         }
 
+        // reprendre demain le header...
+    }
+    .header__container{
+        display: flex;
+        flex-direction: row;
+        .header__comeback{
+            display: flex;
+            align-items: center;
+        }
     }
 }
