--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -23,6 +23,14 @@
     margin-right: 10px;
     color: #353535;
   }
+  .header__container {
+    display: flex;
+    flex-direction: row;
+  }
+  .header__container .header__comeback {
+    display: flex;
+    align-items: center;
+  }
 }
 body {
   font-family: "roboto", sans-serif;
@@ -222,6 +230,60 @@ body {
   .restaurants__cards__description__text h3 {
     margin: 0px;
     padding-top: 15px;
+  }
+  .images__menu {
+    position: absolute;
+    z-index: 0;
+    width: 100%;
+  }
+  .images__menu img {
+    width: 100%;
+    height: 275px;
+    object-fit: cover;
+  }
+  .menu__container {
+    background-color: #F6F6F6;
+    position: relative;
+    z-index: 1;
+    border-radius: 35px 35px 0px 0px;
+    margin-top: 230px;
+  }
+  .menu__container .title {
+    padding: 40px 20px 0px 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .menu__container .title h2 {
+    margin: 0px;
+  }
+  .menu__container .enter {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
+  }
+  .menu__container .menu__cards {
+    width: 80%;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0px 4.0114941597px 15.0431032181px 0px rgba(0, 0, 0, 0.1019607843);
+    padding: 10px;
+  }
+  .menu__container .menu__cards__title {
+    padding-bottom: 5px;
+  }
+  .menu__container .menu__cards__title h3 {
+    margin: 0px;
+  }
+  .menu__container .menu__cards__txt__price {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .menu__container .menu__cards__txt__price p {
+    margin: 0px;
   }
 }
 .footer {
