--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -186,5 +186,63 @@ body{
             }
         }
     }
+// Partie page des menus
+    .images__menu{
+        position: absolute;
+        z-index: 0;
+        width: 100%;
+        & img{
+        width: 100%;
+        height: 275px;
+        object-fit: cover;
+        }
+    }
+    .menu__container{
+        background-color: #F6F6F6;
+        position: relative;
+        z-index: 1;
+        border-radius: 35px 35px 0px 0px;
+        margin-top: 230px;
+        .title{
+            padding: 40px 20px 0px 10px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+
+            & h2{
+                margin: 0px;
+            }
+        }
+        
+        .enter{
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            align-content: center;
+        }
+        .menu__cards{
+            width: 80%;
+            border: none;
+            border-radius: 15px;
+            box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px #0000001A;
+            padding: 10px;
+            &__title{
+                padding-bottom: 5px;
+                & h3{
+                    margin: 0px;
+                }
+            }
+            &__txt__price{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                & p{
+                    margin: 0px;
+                }
+            }
+        }
+    }
+    
 }
 
