--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -107,6 +107,10 @@ body{
             flex-direction: column;
             justify-content: center;
             z-index: 0;
+            & a{
+                text-decoration: none;
+                color: black;
+            }
             & img{
                 object-fit: cover;
                 height: 176px;
@@ -207,12 +211,11 @@ body{
         border-radius: 35px 35px 0px 0px;
         margin-top: 230px;
         .title{
-            padding: 40px 20px 0px 50px;
+            padding-top: 40px;
+            margin: 0px 30px 0px 30px;
             display: flex;
-            flex-direction: row;
             align-items: center;
             justify-content: space-between;
-            width: 80%;
             & h2{
                 font-size: 28px;
                 font-family: "shrikhand", sans-serif;
@@ -233,8 +236,9 @@ body{
         .menu{
             display: flex;
             flex-direction: column;
+            flex-wrap: wrap;
+            align-content: center;
             &__title{
-                padding-left: 50px;
                 & p{
                     margin: 15px 0px 3px 0px;
                 }
@@ -242,7 +246,7 @@ body{
             .green__bar{
                 border: 1px solid #99E2D0;
                 width: 40px;
-                margin: 0px 0px 10px 50px;
+                margin-bottom: 10px;
             }
         }
         .menu__cards{
@@ -251,7 +255,7 @@ body{
             border-radius: 15px;
             box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px #0000001A;
             padding: 10px;
-            margin: 0px 0px 10px 50px;
+            margin-bottom: 10px;
             &__title{
                 padding-bottom: 5px;
                 & h3{
@@ -267,6 +271,7 @@ body{
                 }
                 & .bold{
                     font-weight: bold;
+                    padding: 0px 10px 5px 0px;
                 }
             }
         }
