--- a/site_production/sass/header.scss
+++ b/site_production/sass/header.scss
@@ -1,11 +1,11 @@
 // Responsive Mobile
 @media (max-width: 767.98px) {
 
-    .header__logo {
+    .logo__container {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 20px 0px 20px 0px;
+        padding: 30px 0px 20px 0px;
         box-shadow: 0px 5px 10px 0px #00000026;
         z-index: 2;
         position: relative;
@@ -26,14 +26,29 @@
             color: #353535;
         }
 
-        // reprendre demain le header...
+        
     }
     .header__container{
-        display: flex;
-        flex-direction: row;
-        .header__comeback{
+        & a{
+            text-decoration: none;
+            color: #353535;
+        }
+        & .header__comeback{
             display: flex;
             align-items: center;
+            font-size: 17px;
+            position: relative;
+            z-index: 1;
+            top: 25px;
+            left: 30px;
+            width: 15px;
+        }
+        & .header__logo{
+            display: flex;
+            justify-content: center;
+            position: relative;
+            z-index: 0;
+            padding-bottom: 15px;
         }
     }
 }
