--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -162,6 +162,10 @@ body{
             justify-content: center;
             z-index: 0;
             margin-top: 30px;
+            & a{
+                text-decoration: none;
+                color: black;
+            }
             & img{
                 object-fit: cover;
                 height: 176px;
