--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -145,6 +145,7 @@ body{
                     z-index: 1;
                     left: 310px;
                     bottom: 70px;
+                    width: 23px;
                     
                     
                     // width: 22px;
@@ -186,6 +187,7 @@ body{
                     z-index: 1;
                     left: 310px;
                     bottom: 70px;
+                    width: 23px;
                     & .fa-heart{
                         font-size: 22px;
                     }
