--- a/site_production/sass/main.scss
+++ b/site_production/sass/main.scss
@@ -1,4 +1,5 @@
-@import "./variables.scss";
 @import "./header.scss";
 @import "./body.scss";
 @import "./footer.scss";
+@import "./variables.scss";
+@import "./animations.scss";
