--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -165,7 +165,7 @@ body{
             margin-top: 30px;
             & a{
                 text-decoration: none;
-                color: black;
+                color: $cd-color--txt;
             }
             & img{
                 object-fit: cover;
