--- a/site_production/sass/animations.scss
+++ b/site_production/sass/animations.scss
@@ -7,7 +7,7 @@
         transform: translateY(0);
     }
 }
-.loader__img{
+/*.loader__img{
     
     display: flex;
     justify-content: center;
@@ -25,4 +25,4 @@ body{
 .loader{
     position: relative;
     z-index: 1;
-}
+}*/
