--- a/site_production/sass/variables.scss
+++ b/site_production/sass/variables.scss
@@ -1,12 +1,14 @@
 $cd-background: white;
 $cd-shadow: #00000026;
+$cd-shadow--secondary: #0000001A;
 $cd-background--main: #F6F6F6;
 $cd-color--font: #7E7E7E;
 $cd-background--secondary: #FDF6F6;
+$cd-background--notif: #99E2D0;
 $cd-color--txt: black;
-$cd-color--txt: white;
 $background-linear--button: linear-gradient(#FF79DA, #9356DC);
 $width: 100%;
+$cd-background--circle: #9356DC;
 
 
 
