r'ajout de relative sur div restaurant et footer + mise en place du background white pour le loader

--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -89,6 +89,7 @@ body{
     .restaurants{
         background-color: $cd-background--secondary;
         padding-bottom: 70px;
+        position: relative;
         &__title{
             padding: 60px  0px 0px 15px;
             & h2{
