--- a/site_production/sass/footer.scss
+++ b/site_production/sass/footer.scss
@@ -1,5 +1,6 @@
 .footer{
     background-color: #353535;
+    position: relative;
     &__restaurant{
         display: flex;
         flex-direction: row;
