--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -147,6 +147,7 @@ body {
   .restaurants {
     background-color: #FDF6F6;
     padding-bottom: 70px;
+    position: relative;
   }
   .restaurants__title {
     padding: 60px 0px 0px 15px;
@@ -358,6 +359,7 @@ body {
 }
 .footer {
   background-color: #353535;
+  position: relative;
 }
 .footer__restaurant {
   display: flex;
@@ -419,24 +421,14 @@ body {
     transform: translateY(0);
   }
 }
-/*.loader__img{
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transform-origin: left;
-    background-image: url();
-    width: 150px;
-    height: 200px;
+.loader {
+  background-color: white;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
 }
-body{
-    background-color: white;
-    position: relative;
-    z-index: 0;
-}
-.loader{
-    position: relative;
-    z-index: 1;
-}*/
 
 /*# sourceMappingURL=styles.css.map */
