--- a/site_production/sass/animations.scss
+++ b/site_production/sass/animations.scss
@@ -7,22 +7,12 @@
         transform: translateY(0);
     }
 }
-/*.loader__img{
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transform-origin: left;
-    background-image: url();
-    width: 150px;
-    height: 200px;
-}
-body{
-    background-color: white;
-    position: relative;
-    z-index: 0;
-}
 .loader{
-    position: relative;
-    z-index: 1;
-}*/
+    background-color: $cd-background;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+}
