--- a/site_production/sass/animations.scss
+++ b/site_production/sass/animations.scss
@@ -1,10 +1,21 @@
-@keyframes loader-img{
-    0%{
-        transform: translateY(-9999);
+@keyframes loader-translate{
+    from{
+        transform: translateX(-9999px);
 
     }
-    40%{
-        transform: translateY(0);
+    to{
+        transform: translateX(0);
+    }
+}
+@keyframes loader-rotation{
+    0%{
+        transform: rotate(0deg);
+    }
+    50%{
+        transform: rotate(180deg);
+    }
+    100%{
+        transform: rotate(360deg);
     }
 }
 .loader{
@@ -14,5 +25,14 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 10;
+    z-index: 9;
+    & img{
+        position: absolute;
+        z-index: 10;
+        width: 75px;
+        height: 75px;
+        top: 40%;
+        left: 50%;
+        animation: loader-translate 1950ms 50ms ease-in-out, loader-rotation 850ms 2150ms both ease-in-out;
+    }
 }
