animation loader fini il me reste plus cas faire disparaitre le tout a la fin de l'animation

--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -413,23 +413,18 @@ body {
   margin: 0px;
 }
 
-@keyframes loader-translate {
-  from {
-    transform: translateX(-9999px);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-@keyframes loader-rotation {
+@keyframes loader {
   0% {
-    transform: rotate(0deg);
+    transform: translateX(-900px);
   }
   50% {
-    transform: rotate(180deg);
+    transform: translateX(0);
+  }
+  60% {
+    transform: rotate(0deg);
   }
   100% {
-    transform: rotate(360deg);
+    transform: rotate(720deg);
   }
 }
 .loader {
@@ -448,7 +443,7 @@ body {
   height: 75px;
   top: 40%;
   left: 50%;
-  animation: loader-translate 1950ms 50ms ease-in-out, loader-rotation 850ms 2150ms both ease-in-out;
+  animation: loader 2900ms 100ms ease-in-out;
 }
 
 /*# sourceMappingURL=styles.css.map */
