--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -413,6 +413,21 @@ body {
   margin: 0px;
 }
 
+@keyframes background {
+  0% {
+    background-color: white;
+    opacity: 1;
+  }
+  95% {
+    background-color: white;
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    background: transparent;
+    display: none;
+  }
+}
 @keyframes loader {
   0% {
     transform: translateX(-900px);
@@ -428,13 +443,13 @@ body {
   }
 }
 .loader {
-  background-color: white;
   position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   z-index: 9;
+  animation: background 3000ms forwards;
 }
 .loader img {
   position: absolute;
@@ -443,7 +458,7 @@ body {
   height: 75px;
   top: 40%;
   left: 50%;
-  animation: loader 2900ms 100ms ease-in-out;
+  animation: loader 2600ms 100ms ease-in-out;
 }
 
 /*# sourceMappingURL=styles.css.map */
