--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -413,7 +413,7 @@ body {
   margin: 0px;
 }
 
-@keyframes background {
+@keyframes background-loader {
   0% {
     background-color: white;
     opacity: 1;
@@ -449,7 +449,7 @@ body {
   left: 0;
   right: 0;
   z-index: 9;
-  animation: background 3000ms forwards;
+  animation: background-loader 3000ms forwards;
 }
 .loader img {
   position: absolute;
@@ -458,7 +458,31 @@ body {
   height: 75px;
   top: 40%;
   left: 50%;
-  animation: loader 2600ms 100ms ease-in-out;
+  animation: loader 2600ms ease-in-out;
+}
+
+@keyframes appearance-title {
+  from {
+    transform: translateX(-999px);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+.title {
+  animation: appearance-title 1000ms;
+}
+
+@keyframes appearance-enter {
+  from {
+    transform: translateX(-999px);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+.menu {
+  animation: appearance-enter 1000ms;
 }
 
 /*# sourceMappingURL=styles.css.map */
