--- a/site_production/sass/animations.scss
+++ b/site_production/sass/animations.scss
@@ -1,4 +1,5 @@
-@keyframes background{
+// Animation loader
+@keyframes background-loader{
     0%{
         background-color: white;
         opacity: 1;
@@ -34,7 +35,7 @@
     left: 0;
     right: 0;
     z-index: 9;
-    animation: background 3000ms forwards;
+    animation: background-loader 3000ms forwards;
 
     & img{
         position: absolute;
@@ -43,6 +44,31 @@
         height: 75px;
         top: 40%;
         left: 50%;
-        animation: loader 2600ms 100ms ease-in-out;
+        animation: loader 2600ms ease-in-out;
     }
+}
+// Animation menu
+//Titre des page de menu
+@keyframes appearance-title {
+    from{
+        transform: translateX(-999px);
+    }
+    to{
+        transform: translateX(0);
+    }
+}
+.title{
+    animation: appearance-title 1000ms;
+}
+// Entrée
+@keyframes appearance-enter{
+    from{
+        transform: translateX(-999px);
+    }
+    to{
+        transform: translateX(0);
+    }
+}
+.menu{
+    animation: appearance-enter 1000ms;
 }
